infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: findpartnernats
          image: nats-streaming:0.23.0
          args: [
             '-p',
             '4222',
             '-m',
             '8222',
             '-hbi',
             '5s',
             '-hbt',
             '5s',
             '-hbf',
             '2',
             '-SD',
             '-cid',
             'findpartner'
          ]
---

apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
      protocol: TCP
