infra/k8s/profile-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-depl

spec:
  replicas: 1
  selector: 
    matchLabels:
      app: profile
  template:
    metadata:
      labels: 
        app: profile
    spec:
      containers:
        - name: findpartnerprofile
          image: rohithputha/findpartnerprofile
          imagePullPolicy: Never

---

apiVersion: v1
kind: Service
metadata:
  name: profile-depl-srv
spec:
  selector:
    app: profile
    
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
