infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-findpartner
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: findpartner.in
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-depl-srv
                port:
                  number: 3000
          - path: /api/profile/?(.*)
            pathType: Prefix
            backend: 
              service: 
                name: profile-depl-srv
                port:
                  number: 3001
          - path: /api/recommendation/?(.*)
            pathType: Prefix
            backend:
              service:
                name: recommendation-depl-srv
                port:
                  number: 3002
